<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/color_2">
    <!--Container-2 !-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/color_1">
        <!--Container-2-1 !-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tvInput"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:background="@color/color_2"
                android:gravity="end|bottom"
                android:textSize="25sp"
                android:text=""
                android:backgroundTint="@color/color_4"
                >

            </TextView>
        </LinearLayout>
        <!--Container-2-2 !-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"

            >
            <Button
                android:id="@+id/btnNine"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:onClick="onDigit"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_2"
                android:text="@string/nin"
                android:textSize="25sp"

                tools:ignore="UsingOnClickInXml" />


            <Button
                android:id="@+id/btnEight"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_2"
                android:text="@string/eight"
                android:onClick="onDigit"
                android:textSize="25sp"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_2"
                android:text="@string/sev"
                android:onClick="onDigit"
                android:textSize="25sp"
                tools:ignore="UsingOnClickInXml" />


        </LinearLayout>
        <!--Container-2-3 !-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="horizontal">
            <Button
                android:id="@+id/btnSix"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:onClick="onDigit"
                android:backgroundTint="@color/color_2"
                android:text="@string/six"
                android:textSize="25sp">

            </Button>
            <Button
                android:id="@+id/btnFive"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_2"
                android:text="@string/five"
                android:onClick="onDigit"
                android:textSize="25sp">


            </Button>
            <Button
                android:id="@+id/btnFour"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_2"
                android:text="@string/four"
                android:onClick="onDigit"
                android:textSize="25sp">

            </Button>
        </LinearLayout>
        <!--Container-2-4 !-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="horizontal">
            <Button
                android:id="@+id/btnThree"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_2"
                android:text="@string/three"
                android:onClick="onDigit"
                android:textSize="25sp">

            </Button>
            <Button
                android:id="@+id/btnTwo"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_2"
                android:text="@string/two"
                android:onClick="onDigit"
                android:textSize="25sp">


            </Button>

            <Button
                android:id="@+id/btnOne"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_2"
                android:text="@string/one"
                android:onClick="onDigit"
                android:textSize="25sp"
                >

            </Button>

        </LinearLayout>
        <!--Container-2-5 !-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="horizontal">
            <Button
                android:id="@+id/btnZero"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_2"
                android:text="@string/zero"
                android:onClick="onDigit"
                android:textSize="25sp"
                tools:ignore="UsingOnClickInXml">

            </Button>
            <Button
                android:id="@+id/btnAdd"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_3"
                android:text="@string/plus"
                android:onClick="onOperator"
                android:textSize="25sp">


            </Button>
            <Button
                android:id="@+id/btnMinus"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_3"
                android:text="@string/minus"
                android:onClick="onOperator"
                android:textSize="30sp">

            </Button>
        </LinearLayout>
        <!--Container-2-6 !-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_3"
                android:onClick="onOperator"
                android:text="@string/mul"
                android:textSize="25sp">

            </Button>
            <Button
                android:id="@+id/btnDivide"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_3"
                android:text="@string/divide"
                android:onClick="onOperator"
                android:textSize="25sp">


            </Button>
            <Button
                android:id="@+id/btnPoint"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_3"
                android:text="."
                android:onClick="onDecimalPoint"
                android:textSize="35sp"
                tools:ignore="HardcodedText">

            </Button>
        </LinearLayout>
        <!--Container-2-7 !-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

<!--            <Button-->
<!--                android:layout_width="70dp"-->
<!--                android:layout_height="60dp"-->
<!--                android:layout_marginRight="30dp"-->
<!--                android:backgroundTint="@color/color_3">-->

<!--            </Button>-->
            <Button
                android:id="@+id/btnEqual"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="35dp"
                android:backgroundTint="@color/color_4"
                android:text="@string/equal"
                android:onClick="onEqual"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="25sp">


            </Button>
            <Button
                android:id="@+id/btnClear"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/color_4"
                android:text="@string/clear"
                android:onClick="onClear"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp">

            </Button>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>